# vectorgrep

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
go-api/: Dockerfile  commands.txt  failed-important.txt  go.mod
go-api/cmd/cli/: main.go
go-api/cmd/ingest-batch/: main.go
go-api/cmd/server/: main.go
go-api/internal/embedder/: client.go
python-service/: Dockerfile  embedder.py  main.py  parser.py  pyproject.toml  vector_store.py
scripts/: generate_commands.py
