[project]
name = "python-service"
version = "0.1.0"
description = "Semantic search engine for Linux man pages"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "numpy>=2.4.4",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "uvicorn[standard]>=0.49.0",
]
